feat: configure H2 database and implement data initialization for study tracking entities